# pinwheel

./: .gitignore  Cargo.toml  LICENSE.md  README.md  levels.json  shell.nix
assets/: AlanSans-LICENSE.md  levels.json
src/: level.rs  main.rs  state.rs  utils.rs
src/game/: mod.rs  pin_flying.rs  sector.rs  spinner.rs  utils.rs
src/game/state/: mod.rs  render.rs  step.rs
