[package]
name = "pinwheel"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uom = { version = "0.37.0", features = ["serde"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
